--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      APP_SECRET: ${{ secrets.APP.SECRET}}
+      APP_SECRET: ${{ secrets.APP_SECRET}}
 
     steps:
       - name: Checkout repository
