--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-build
-          path: app/app.py
+          path: app/
 
       - name: Download build artifact (no integrity check)
         uses: actions/download-artifact@v4
