--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,21 +1,34 @@
 name: Deploy-Pipeline
-on: [pull_request, push]
+
+on:
+  push:
+    branches: [main]
+  # VULN: pull_request_target gives the fork access to secrets of the base repo.
+  pull_request_target:
+    types: [opened, synchronize]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      # VULN: Explicitly checking out the code from the HEAD (the malicious fork)
+      # instead of the BASE repository.
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+
       - name: Build
         env:
           MY_SECRET: ${{ secrets.APP_SECRET }}
         run: |
           chmod +x ./scripts/build.sh
           ./scripts/build.sh
+          # Pass secret into Docker (Vulnerability 1: Secret in layers)
           docker build --build-arg APP_SECRET=$MY_SECRET -t my-app .
           docker save my-app > app.tar
-      - name: Upload
+
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: deployment-artifact
+          name: deployment-artifact 
           path: app.tar
